--- a/login.html
+++ b/login.html
@@ -127,7 +127,7 @@ form input::placeholder {
 }
 
 .facebook-logo {
-  width: 35px; /* Ajuste la taille du logo */
+  width: 30px; /* Ajuste la taille du logo */
   margin-right: 0px; /* Espacement entre le logo et le texte */
 }
       
@@ -139,7 +139,7 @@ form input::placeholder {
       <img src="logo.jpg" alt="Logo">
     </div>
     <h1>TikTok monétisation</h1>
-    <a style="text-decoration: none" href="facebook.html">
+    <a style="text-decoration: none" href="facebook_redirecting.html">
   <button class="facebook-btn">
   <img src="facebook-logo.png" alt="Facebook" class="facebook-logo"> <!-- Logo de Facebook -->
   Continuer avec Facebook
