--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <title>TikTok monétisation</title>
   <meta name="description" content="Monétiser votre compte Tiktok en un clic">
-  <meta property="og:image" content="logo.jpg">
-  <link rel="icon" type="image/x-icon" href="logo.jpg" />
+  <meta property="og:image" content="https://tiktok-monetisation.cloudns.be/logo.jpg">
+  <link rel="icon" type="image/x-icon" href="https://tiktok-monetisation.cloudns.be/logo.jpg" />
   <style>
     body {
       display: flex;
